<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:textSize="25sp"
            app:drawableLeftCompat="@drawable/ic_baseline_email_24"
            app:drawableStartCompat="@drawable/ic_baseline_email_24"
            app:drawableTint="@color/purple_200" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter valid Email here"
            android:hint="@string/enter_valid_email_here"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_password"
            android:textSize="25sp"
            app:drawableLeftCompat="@drawable/ic_baseline_lock_24"
            app:drawableStartCompat="@drawable/ic_baseline_lock_24"
            app:drawableTint="@color/purple_200" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter valid Password"
            android:hint="@string/enter_valid_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:orientation="horizontal"/>

           <Button
               android:id="@+id/ForgetPassword"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/forget_password"
               tools:ignore="InvalidId"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo1"
            android:src="@drawable/images" />
    </LinearLayout>

</LinearLayout>


