<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:textSize="25sp"
        app:drawableLeftCompat="@drawable/ic_baseline_email_24"
        app:drawableStartCompat="@drawable/ic_baseline_email_24"
        app:drawableTint="@color/purple_200" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Enter Username here"
        android:hint="@string/enter_valid_username_here"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_phone_number"
        android:textSize="25sp"
        app:drawableLeftCompat="@drawable/ic_baseline_lock_24"
        app:drawableStartCompat="@drawable/ic_baseline_lock_24"
        app:drawableTint="@color/purple_200" />

    <EditText
        android:id="@+id/etPhone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Enter valid Phone no"
        android:hint="@string/enter_valid_phone_no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"/>

        <Button
            android:id="@+id/Sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in"/>



</LinearLayout>
</LinearLayout>


