<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loginactivity3">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="25sp"
            app:drawableLeftCompat="@drawable/ic_baseline_email_24"
            app:drawableStartCompat="@drawable/ic_baseline_email_24"
            app:drawableTint="@color/purple_200" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter valid Email here"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/last_name"
            android:textSize="25sp"
            app:drawableLeftCompat="@drawable/ic_baseline_lock_24"
            app:drawableStartCompat="@drawable/ic_baseline_lock_24"
            app:drawableTint="@color/purple_200" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter valid Last Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_phone_no"
            android:textSize="25sp"
            app:drawableLeftCompat="@drawable/ic_baseline_lock_24"
            app:drawableStartCompat="@drawable/ic_baseline_lock_24"
            app:drawableTint="@color/purple_200" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter valid Phone no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_age"
            android:textSize="25sp"
            app:drawableLeftCompat="@drawable/ic_baseline_lock_24"
            app:drawableStartCompat="@drawable/ic_baseline_lock_24"
            app:drawableTint="@color/purple_200" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter valid Age"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="enter_city_name"
            android:textSize="25sp"
            app:drawableLeftCompat="@drawable/ic_baseline_lock_24"
            app:drawableStartCompat="@drawable/ic_baseline_lock_24"
            app:drawableTint="@color/purple_200" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter valid city Name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />


    </LinearLayout>

</LinearLayout>